2010-05-25  kitone  <kitone@gna.org>

	* plugins/subtitleformats/bitc/Makefile.am:
	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/bitc/dialog-bitc.ui:
	Remove the file dialog-bitc.ui, use instead FramerateChooserDialog.

2010-05-25  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gui/comboboxframerate.cc:
	* src/gui/comboboxframerate.h:
	* src/gui/dialogutility.cc:
	* src/gui/dialogutility.h:
	Introduce ComboBoxFramerate and FramerateChooserDialog.

2010-05-22  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/sprucestl/Makefile.am:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.se-plugin.in:
	Introduce new subtitle format Spruce STL. Fix sr #2543 : Support for .stl file format.

2010-05-04  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Display the saving dialog after generating waveform (with open waveform).

2010-04-29  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Display the saving dialog after generating waveform or keyframes.

2010-04-29  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix bug #15942 : Default location in file select dialog (waveform and
	keyframes).

2010-04-29  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesgenerator.cc:
	Set the video uri.

2010-04-29  kitone  <kitone@gna.org>

	* src/keyframes.cc:
	* src/keyframes.h:
	Add video uri and update kf format to the v2.

2010-04-29  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2010-04-06  kitone  <kitone@gna.org>

	* NEWS:
	* README:
	* configure.in:
	Preparing 0.36.2 release.

2010-04-06  kitone  <kitone@gna.org>

	* configure.in: