@@ -1,5 +1,10 @@
 2010-05-25  kitone  <kitone@gna.org>
 
+	* plugins/subtitleformats/sprucestl/sprucestl.cc:
+	Ask framerate value with the FramerateChooserDialog. Small improvements.
+
+2010-05-25  kitone  <kitone@gna.org>
+
 	* plugins/subtitleformats/bitc/Makefile.am:
 	* plugins/subtitleformats/bitc/bitc.cc:
 	* plugins/subtitleformats/bitc/dialog-bitc.ui:
